@@ -29,6 +29,10 @@ API Changes:
      `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
      for details. ``RB_ID=828898``
 
+   * util-core: Deprecated method `Future.get` has been removed because it made it
+     too easy to hide blocking code. Replaced usage with the more explicit
+     `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``
+
 6.34.0  2016-04-26
 
 New Features:
